javax, jnajack, AudioMetrics, MP3, PlayAudio